--- a/.env
+++ b/.env
@@ -1,9 +1,29 @@
-MYSQL_ROOT_PASSWORD=sterk_wachtwoord
-MYSQL_DATABASE=homeassistant
-MYSQL_USER=ha_user
-MYSQL_PASSWORD=sterk_wachtwoord
-
+# =====================================================
+# Home Assistant
+# =====================================================
 HA_TZ=Europe/Amsterdam
 
-DUCKDNS_SUB=jouwsub
-DUCKDNS_TOKEN=jouwtoken
+# =====================================================
+# MariaDB
+# =====================================================
+MYSQL_ROOT_PASSWORD=changeme_root
+MYSQL_DATABASE=homeassistant
+MYSQL_USER=ha_user
+MYSQL_PASSWORD=changeme_password
+
+# =====================================================
+# DuckDNS
+# =====================================================
+DUCKDNS_SUB=my-subdomain
+DUCKDNS_TOKEN=changeme_token
+
+# =====================================================
+# Optionele USB devices (full path /dev/serial/by-id/...)
+# Laat leeg als je geen Zigbee/Z-Wave/BLE/etc. hebt
+# =====================================================
+ZIGBEE_USB=
+ZWAVE_USB=
+BLE_USB=
+RF_USB=
+IR_USB=
+P1_USB=
