--- a/.env
+++ b/.env
@@ -1,29 +1,23 @@
-# =====================================================
+# Netwerk
+STATIC_IP=192.168.1.10/24
+GATEWAY=192.168.1.1
+DNS1=9.9.9.9
+DNS2=1.1.1.1
+DNS3=8.8.8.8
+
 # Home Assistant
-# =====================================================
 HA_TZ=Europe/Amsterdam
 
-# =====================================================
 # MariaDB
-# =====================================================
-MYSQL_ROOT_PASSWORD=changeme_root
+MYSQL_ROOT_PASSWORD=supersecret
+MYSQL_USER=hauser
+MYSQL_PASSWORD=supersecretpass
 MYSQL_DATABASE=homeassistant
-MYSQL_USER=ha_user
-MYSQL_PASSWORD=changeme_password
 
-# =====================================================
 # DuckDNS
-# =====================================================
-DUCKDNS_SUB=my-subdomain
-DUCKDNS_TOKEN=changeme_token
+DUCKDNS_SUB=myhome
+DUCKDNS_TOKEN=xxxxxxxxxxxxxxxx
 
-# =====================================================
-# Optionele USB devices (full path /dev/serial/by-id/...)
-# Laat leeg als je geen Zigbee/Z-Wave/BLE/etc. hebt
-# =====================================================
-ZIGBEE_USB=
-ZWAVE_USB=
-BLE_USB=
-RF_USB=
-IR_USB=
-P1_USB=
+# WireGuard
+WG_PORT=51820
+WG_INTERFACE=wg0
