--- a/.env
+++ b/.env
@@ -1,23 +1,59 @@
-# Netwerk
-STATIC_IP=192.168.1.10/24
-GATEWAY=192.168.1.1
+# =========================
+# NETWERK CONFIGURATIE
+# =========================
+STATIC_IP=192.168.178.2/24   # Je lokale IP + subnet
+GATEWAY=192.168.178.1       # Je gateway
 DNS1=9.9.9.9
 DNS2=1.1.1.1
 DNS3=8.8.8.8
 
-# Home Assistant
-HA_TZ=Europe/Amsterdam
+# =========================
+# HOME ASSISTANT
+# =========================
+HA_TZ=Europe/Amsterdam      # Timezone
 
-# MariaDB
+# =========================
+# MariaDB (Home Assistant database)
+# =========================
 MYSQL_ROOT_PASSWORD=supersecret
 MYSQL_USER=hauser
 MYSQL_PASSWORD=supersecretpass
 MYSQL_DATABASE=homeassistant
 
-# DuckDNS
-DUCKDNS_SUB=myhome
-DUCKDNS_TOKEN=xxxxxxxxxxxxxxxx
+# =========================
+# MQTT (Mosquitto)
+# =========================
+MQTT_USER=hauser
+MQTT_PASSWORD=supersecretpass
 
+# =========================
+# DuckDNS
+# =========================
+DUCKDNS_SUB=myhome           # Je DuckDNS subdomein
+DUCKDNS_TOKEN=xxxxxxxxxxxxxx # DuckDNS token
+
+# =========================
 # WireGuard
+# =========================
 WG_PORT=51820
 WG_INTERFACE=wg0
+WG_SERVER_PRIV=                # Wordt automatisch aangemaakt
+WG_SERVER_PUB=                 # Wordt automatisch aangemaakt
+WG_CLIENT_PRIV=                # Wordt automatisch aangemaakt
+WG_CLIENT_PUB=                 # Wordt automatisch aangemaakt
+
+# =========================
+# USB DEVICES (wordt autodetect)
+# =========================
+ZIGBEE_USB=/dev/ttyUSB0
+ZWAVE_USB=/dev/ttyUSB1
+BLE_USB=/dev/hci0
+RF_USB=/dev/ttyUSB2
+IR_USB=/dev/ttyUSB3
+P1_USB=/dev/ttyUSB4
+BT_USB=/dev/hci0   # Bluetooth dongle
+
+# =========================
+# DOCKERSPECIFIEK
+# =========================
+PORTAINER_VOLUME=portainer_data
