--- a/.env
+++ b/.env
@@ -57,3 +57,8 @@ BT_USB=/dev/hci0   # Bluetooth dongle
 # DOCKERSPECIFIEK
 # =========================
 PORTAINER_VOLUME=portainer_data
+
+# =========================
+# BESZEL
+# =========================
+BESZEL_PUBLIC_KEY=je_hub_sleutel
