--- a/.env
+++ b/.env
@@ -1,40 +1,53 @@
-# =========================
+# =====================================================
+# HOMELAB INSTALLER - CONFIGURATIE & DOCUMENTATIE
+# =====================================================
+#
+# Dit script installeert een volledige Home Assistant homelab stack op Debian 13.
+# Inclusief: Home Assistant, MariaDB, Mosquitto, Zigbee2MQTT, Z-Wave JS, BLE2MQTT,
+# RF/IR devices, ESPHome, Portainer, Watchtower, Dozzle, InfluxDB, Grafana,
+# Beszel (dashboard + agent), Homepage dashboard, Uptime-Kuma, IT-Tools,
+# DuckDNS en netwerk hardening via UFW.
+#
+# Alle configuratie-instellingen staan hieronder in een voorbeeld .env-blok.
+# Pas deze aan voor jouw netwerk, gebruikers en subdomeinen.
+#
+# =====================================================
 # NETWERK CONFIGURATIE
-# =========================
+# =====================================================
 STATIC_IP=192.168.178.2/24   # Je lokale IP + subnet
 GATEWAY=192.168.178.1       # Je gateway
 DNS1=9.9.9.9
 DNS2=1.1.1.1
 DNS3=8.8.8.8
 
-# =========================
+# =====================================================
 # HOME ASSISTANT
-# =========================
+# =====================================================
 HA_TZ=Europe/Amsterdam      # Timezone
 
-# =========================
+# =====================================================
 # MariaDB (Home Assistant database)
-# =========================
+# =====================================================
 MYSQL_ROOT_PASSWORD=supersecret
 MYSQL_USER=hauser
 MYSQL_PASSWORD=supersecretpass
 MYSQL_DATABASE=homeassistant
 
-# =========================
+# =====================================================
 # MQTT (Mosquitto)
-# =========================
+# =====================================================
 MQTT_USER=hauser
 MQTT_PASSWORD=supersecretpass
 
-# =========================
+# =====================================================
 # DuckDNS
-# =========================
+# =====================================================
 DUCKDNS_SUB=myhome           # Je DuckDNS subdomein
 DUCKDNS_TOKEN=xxxxxxxxxxxxxx # DuckDNS token
 
-# =========================
-# USB DEVICES (wordt autodetect)
-# =========================
+# =====================================================
+# USB DEVICES (optioneel, wordt autodetect)
+# =====================================================
 ZIGBEE_USB=/dev/ttyUSB0
 ZWAVE_USB=/dev/ttyUSB1
 BLE_USB=/dev/hci0
@@ -43,7 +56,45 @@ IR_USB=/dev/ttyUSB3
 P1_USB=/dev/ttyUSB4
 BT_USB=/dev/hci0   # Bluetooth dongle
 
-# =========================
+# =====================================================
 # DOCKERSPECIFIEK
-# =========================
+# =====================================================
 PORTAINER_VOLUME=portainer_data
+
+# =====================================================
+# BELANGRIJKE NOTITIES
+# =====================================================
+# 1. Beszel:
+#    - Geen .env variabelen nodig voor de agent.
+#    - Na eerste start: open http://$IP:8131 (Beszel Hub), kopieer je Public Key
+#      en plak deze in configuration van beszel-agent als je wilt dat agent koppelt.
+#      Daarna: docker compose up -d
+#
+# 2. Homepage:
+#    - Start op poort 8133
+#    - Basis YAML-bestanden worden automatisch aangemaakt in ./homepage/config
+#    - Voeg eigen links/icons toe naar wens
+#
+# 3. USB devices:
+#    - Als de variabelen leeg zijn, detecteert het script automatisch beschikbare apparaten.
+#
+# 4. MariaDB:
+#    - Home Assistant wordt geconfigureerd om MariaDB te gebruiken in configuration.yaml
+#    - Standaard SQLite wordt vervangen
+#
+# 5. Netwerk & UFW:
+#    - Poort 22 (SSH) moet open blijven, anders verlies je toegang
+#    - UFW regelt alleen toegestane poorten voor Home Assistant stack
+#
+# 6. Docker volumes:
+#    - Portainer gebruikt portainer_data als volume
+#    - Alle andere containers gebruiken lokale mappen onder $STACK_DIR
+#
+# 7. Veiligheid:
+#    - Zet .env bestand op chmod 600
+#    - Root toegang vereist voor installatie
+#    - Minimaal 14 GB vrije schijfruimte en 3 GB RAM aanbevolen
+#
+# =====================================================
+# EINDE DOCUMENTATIE / .ENV TEMPLATE
+# =====================================================
