--- a/homeassistant/configuration.yaml
+++ b/homeassistant/configuration.yaml
@@ -1,28 +1,1 @@
-# --- Notifiers ---
-notify:
-  # Primary: Telegram
-  - name: primary_notify
-    platform: telegram
-    api_key: !secret telegram_token
-    chat_id: 123456789   # je chat_id
-
-  # Backup: Email
-  - name: backup_notify
-    platform: smtp
-    server: smtp.gmail.com  # voorbeeld Gmail SMTP
-    port: 587
-    sender: jouw.email@gmail.com
-    encryption: starttls
-    username: jouw.email@gmail.com
-    password: !secret email_password
-    recipient:
-      - jouw.email@gmail.com
-
-# Optional: Signal later
-#  - name: signal_notify
-#    platform: rest
-#    resource: 'https://api.signal.org/v1/messages'
-#    method: POST
-#    headers:
-#      Authorization: "Bearer !secret signal_token"
-#    message_param_name: message
+automation: !include_dir_merge_list automation/
