--- a/homeassistant/secrets.yaml
+++ b/homeassistant/secrets.yaml
@@ -1,4 +1,13 @@
-# secrets.yaml
-telegram_token: 123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
-email_password: your-email-password
-signal_token: your-signal-api-token
+# Telegram
+telegram_token: "123456:ABCDEF..." 
+telegram_chat_id: "987654321"
+
+# Email
+email_sender: "jij@example.com"
+email_username: "jij@example.com"
+email_password: "supergeheim"
+email_recipient: "ontvanger@example.com"
+
+# Signal
+signal_token: "abcdef123456"
+signal_number: "+31612345678"
