--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 # NETWERK CONFIGURATIE
 # =====================================================
 STATIC_IP=192.168.178.2/24   # Je lokale IP + subnet
+JUST_IP=172.168.178.2
 GATEWAY=192.168.178.1       # Je gateway
 DNS1=9.9.9.9
 DNS2=1.1.1.1
