--- a/homeassistant/secrets.yaml
+++ b/homeassistant/secrets.yaml
@@ -8,6 +8,5 @@ email_username: "jij@example.com"
 email_password: "supergeheim"
 email_recipient: "ontvanger@example.com"
 
-# Signal
-signal_token: "abcdef123456"
-signal_number: "+31612345678"
+# Gotify
+token: !secret gotify_token
