--- a/.env
+++ b/.env
@@ -62,6 +62,10 @@ BT_USB=/dev/hci0   # Bluetooth dongle
 # =====================================================
 PORTAINER_VOLUME=portainer_data
 
+APPDAEMON_TOKEN=xxxxxxxxxxxxxxxxxxxxxx
+
+NODERED_TOKEN=xxxxxxxxxxxxxxxxxxxxxx
+
 # =====================================================
 # BELANGRIJKE NOTITIES
 # =====================================================
