--- a/nix/.env
+++ b/nix/.env
@@ -3,3 +3,9 @@ MYSQL_ROOT_PASSWORD=homeassistantroot
 MYSQL_DATABASE=homeassistant
 MYSQL_USER=homeassistant
 MYSQL_PASSWORD=homeassistant
+
+# DuckDNS
+DUCKDNS_SUBDOMAINS=your-subdomain
+DUCKDNS_TOKEN=your-duckdns-token
+PUID=1000
+PGID=1000
