--- a/nix/.env
+++ b/nix/.env
@@ -9,3 +9,10 @@ DUCKDNS_SUBDOMAINS=your-subdomain
 DUCKDNS_TOKEN=your-duckdns-token
 PUID=1000
 PGID=1000
+
+# ========================
+# Node-RED
+# ========================
+NODE_RED_PORT=1880
+NODE_RED_USER=homelab
+NODE_RED_PASSWORD=changeme
