--- a/nix/.env
+++ b/nix/.env
@@ -1,14 +1,29 @@
+# ========================
+# Algemene instellingen
+# ========================
 TZ=Europe/Amsterdam
+PUID=1000
+PGID=1000
+
+# ========================
+# MariaDB / Home Assistant database
+# ========================
 MYSQL_ROOT_PASSWORD=homeassistantroot
 MYSQL_DATABASE=homeassistant
 MYSQL_USER=homeassistant
 MYSQL_PASSWORD=homeassistant
 
+# ========================
 # DuckDNS
+# ========================
 DUCKDNS_SUBDOMAINS=your-subdomain
 DUCKDNS_TOKEN=your-duckdns-token
-PUID=1000
-PGID=1000
+
+# ========================
+# AppDaemon
+# ========================
+HA_URL=http://homeassistant:8123
+HA_TOKEN=your-long-lived-access-token
 
 # ========================
 # Node-RED
@@ -16,3 +31,33 @@ PGID=1000
 NODE_RED_PORT=1880
 NODE_RED_USER=homelab
 NODE_RED_PASSWORD=changeme
+
+# ========================
+# Grafana
+# ========================
+GRAFANA_PORT=3000
+
+# ========================
+# Uptime-Kuma
+# ========================
+UPTIME_KUMA_PORT=3001
+
+# ========================
+# Gotify
+# ========================
+GOTIFY_PORT=8081
+
+# ========================
+# Homepage
+# ========================
+HOMEPAGE_PORT=8000
+
+# ========================
+# Beszel
+# ========================
+BESZEL_PORT=8001
+
+# ========================
+# AppDaemon UI
+# ========================
+APPDAEMON_PORT=5050
