--- a/nix/docker-compose.yaml
+++ b/nix/docker-compose.yaml
@@ -6,6 +6,9 @@ networks:
 
 services:
 
+  # --------------------------
+  # Home Assistant
+  # --------------------------
   homeassistant:
     image: ghcr.io/home-assistant/home-assistant:stable
     container_name: homeassistant
@@ -20,13 +23,16 @@ services:
       - /dev/bus/usb:/dev/bus/usb
     environment:
       HASS_DEVICE_AUTODETECT: "1"
-      TZ: Europe/Amsterdam
+      TZ: ${TZ}
     depends_on:
       - mariadb
       - mosquitto
     networks:
       - homelab_net
 
+  # --------------------------
+  # Mosquitto MQTT
+  # --------------------------
   mosquitto:
     image: eclipse-mosquitto:2
     container_name: mosquitto
@@ -38,6 +44,9 @@ services:
     networks:
       - homelab_net
 
+  # --------------------------
+  # MariaDB
+  # --------------------------
   mariadb:
     image: mariadb:11
     container_name: mariadb
@@ -48,17 +57,29 @@ services:
     networks:
       - homelab_net
 
+  # --------------------------
+  # Node-RED
+  # --------------------------
   node-red:
     image: nodered/node-red:latest
     container_name: node-red
     restart: unless-stopped
     ports:
-      - "1880:1880"
+      - "${NODE_RED_PORT}:1880"
+    environment:
+      - TZ=${TZ}
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - NODE_RED_USERNAME=${NODE_RED_USER}
+      - NODE_RED_PASSWORD=${NODE_RED_PASSWORD}
     volumes:
       - ./node-red:/data
     networks:
       - homelab_net
 
+  # --------------------------
+  # InfluxDB
+  # --------------------------
   influxdb:
     image: influxdb:2.7
     container_name: influxdb
@@ -70,12 +91,15 @@ services:
     networks:
       - homelab_net
 
+  # --------------------------
+  # Grafana
+  # --------------------------
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
     restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "${GRAFANA_PORT}:3000"
     volumes:
       - ./grafana:/var/lib/grafana
     depends_on:
@@ -83,43 +107,50 @@ services:
     networks:
       - homelab_net
 
+  # --------------------------
+  # Uptime-Kuma
+  # --------------------------
   uptime-kuma:
     image: louislam/uptime-kuma:1
     container_name: uptime-kuma
     restart: unless-stopped
     ports:
-      - "3001:3001"
+      - "${UPTIME_KUMA_PORT}:3001"
     volumes:
       - ./uptime-kuma:/app/data
     networks:
       - homelab_net
 
+  # --------------------------
+  # DuckDNS
+  # --------------------------
   duckdns:
     image: linuxserver/duckdns
     container_name: duckdns
     restart: unless-stopped
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Europe/Amsterdam
-      - SUBDOMAINS=your-subdomain
-      - TOKEN=your-duckdns-token
+    env_file: .env
     volumes:
       - ./duckdns:/config
     networks:
       - homelab_net
 
+  # --------------------------
+  # Gotify
+  # --------------------------
   gotify:
     image: gotify/server:2.0
     container_name: gotify
     restart: unless-stopped
     ports:
-      - "8081:8080"
+      - "${GOTIFY_PORT}:8080"
     volumes:
       - ./gotify:/app/data
     networks:
       - homelab_net
 
+  # --------------------------
+  # Portainer
+  # --------------------------
   portainer:
     image: portainer/portainer-ce:latest
     container_name: portainer
@@ -133,6 +164,9 @@ services:
     networks:
       - homelab_net
 
+  # --------------------------
+  # Dozzle
+  # --------------------------
   dozzle:
     image: amir20/dozzle:latest
     container_name: dozzle
@@ -144,24 +178,50 @@ services:
     networks:
       - homelab_net
 
+  # --------------------------
+  # Homepage
+  # --------------------------
   homepage:
     image: your/homepage-image
     container_name: homepage
     restart: unless-stopped
     ports:
-      - "8000:80"
+      - "${HOMEPAGE_PORT}:80"
     volumes:
       - ./homepage:/usr/share/nginx/html
     networks:
       - homelab_net
 
+  # --------------------------
+  # Beszel
+  # --------------------------
   beszel:
     image: your/beszel-image
     container_name: beszel
     restart: unless-stopped
     ports:
-      - "8001:80"
+      - "${BESZEL_PORT}:80"
     volumes:
       - ./beszel:/app
+    networks:
+      - homelab_net
+
+  # --------------------------
+  # AppDaemon
+  # --------------------------
+  appdaemon:
+    image: acockburn/appdaemon:latest
+    container_name: appdaemon
+    restart: unless-stopped
+    ports:
+      - "${APPDAEMON_PORT}:5050"
+    volumes:
+      - ./appdaemon:/conf
+    environment:
+      HA_URL: ${HA_URL}
+      HA_TOKEN: ${HA_TOKEN}
+      TZ: ${TZ}
+    depends_on:
+      - homeassistant
     networks:
       - homelab_net
