--- a/nix/.env
+++ b/nix/.env
@@ -24,6 +24,7 @@ DUCKDNS_TOKEN=your-duckdns-token
 # ========================
 HA_URL=http://homeassistant:8123
 HA_TOKEN=your-long-lived-access-token
+APPDAEMON_PORT=5050
 
 # ========================
 # Node-RED
@@ -36,6 +37,8 @@ NODE_RED_PASSWORD=changeme
 # Grafana
 # ========================
 GRAFANA_PORT=3000
+GF_ADMIN_USER=admin
+GF_ADMIN_PASSWORD=changeme
 
 # ========================
 # Uptime-Kuma
@@ -46,18 +49,31 @@ UPTIME_KUMA_PORT=3001
 # Gotify
 # ========================
 GOTIFY_PORT=8081
+GOTIFY_ADMIN_USER=admin
+GOTIFY_ADMIN_PASSWORD=changeme
+
+# ========================
+# Portainer
+# ========================
+PORTAINER_USER=admin
+PORTAINER_PASSWORD=changeme
 
 # ========================
 # Homepage
 # ========================
 HOMEPAGE_PORT=8000
+HOMEPAGE_ADMIN_USER=admin
+HOMEPAGE_ADMIN_PASSWORD=changeme
 
 # ========================
 # Beszel
 # ========================
 BESZEL_PORT=8001
+BESZEL_ADMIN_USER=admin
+BESZEL_ADMIN_PASSWORD=changeme
 
 # ========================
-# AppDaemon UI
+# Mosquitto (optioneel, voor beveiliging broker)
 # ========================
-APPDAEMON_PORT=5050
+MOSQUITTO_USER=homelab
+MOSQUITTO_PASSWORD=changeme
