--- a/nix/docker-compose.yaml
+++ b/nix/docker-compose.yaml
@@ -39,6 +39,10 @@ services:
     restart: unless-stopped
     ports:
       - "1883:1883"
+    env_file: .env
+    environment:
+      - MOSQUITTO_USER=${MOSQUITTO_USER}
+      - MOSQUITTO_PASSWORD=${MOSQUITTO_PASSWORD}
     volumes:
       - ./mosquitto:/mosquitto
     networks:
@@ -100,6 +104,9 @@ services:
     restart: unless-stopped
     ports:
       - "${GRAFANA_PORT}:3000"
+    environment:
+      - GF_ADMIN_USER=${GF_ADMIN_USER}
+      - GF_ADMIN_PASSWORD=${GF_ADMIN_PASSWORD}
     volumes:
       - ./grafana:/var/lib/grafana
     depends_on:
@@ -143,6 +150,9 @@ services:
     restart: unless-stopped
     ports:
       - "${GOTIFY_PORT}:8080"
+    environment:
+      - GOTIFY_ADMIN_USER=${GOTIFY_ADMIN_USER}
+      - GOTIFY_ADMIN_PASSWORD=${GOTIFY_ADMIN_PASSWORD}
     volumes:
       - ./gotify:/app/data
     networks:
@@ -158,6 +168,9 @@ services:
     ports:
       - "9000:9000"
       - "9443:9443"
+    environment:
+      - PORTAINER_USER=${PORTAINER_USER}
+      - PORTAINER_PASSWORD=${PORTAINER_PASSWORD}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./portainer:/data
@@ -187,6 +200,9 @@ services:
     restart: unless-stopped
     ports:
       - "${HOMEPAGE_PORT}:80"
+    environment:
+      - ADMIN_USER=${HOMEPAGE_ADMIN_USER}
+      - ADMIN_PASSWORD=${HOMEPAGE_ADMIN_PASSWORD}
     volumes:
       - ./homepage:/usr/share/nginx/html
     networks:
@@ -201,6 +217,9 @@ services:
     restart: unless-stopped
     ports:
       - "${BESZEL_PORT}:80"
+    environment:
+      - ADMIN_USER=${BESZEL_ADMIN_USER}
+      - ADMIN_PASSWORD=${BESZEL_ADMIN_PASSWORD}
     volumes:
       - ./beszel:/app
     networks:
@@ -218,9 +237,9 @@ services:
     volumes:
       - ./appdaemon:/conf
     environment:
-      HA_URL: ${HA_URL}
-      HA_TOKEN: ${HA_TOKEN}
-      TZ: ${TZ}
+      - HA_URL=${HA_URL}
+      - HA_TOKEN=${HA_TOKEN}
+      - TZ=${TZ}
     depends_on:
       - homeassistant
     networks:
