--- a/nix/.env
+++ b/nix/.env
@@ -1,79 +1,97 @@
-# ========================
-# Algemene instellingen
-# ========================
+# =========================
+# ALGEMEEN
+# =========================
 TZ=Europe/Amsterdam
 PUID=1000
 PGID=1000
 
-# ========================
-# MariaDB / Home Assistant database
-# ========================
-MYSQL_ROOT_PASSWORD=homeassistantroot
-MYSQL_DATABASE=homeassistant
-MYSQL_USER=homeassistant
-MYSQL_PASSWORD=homeassistant
-
-# ========================
-# DuckDNS
-# ========================
-DUCKDNS_SUBDOMAINS=your-subdomain
-DUCKDNS_TOKEN=your-duckdns-token
-
-# ========================
-# AppDaemon
-# ========================
+# =========================
+# HOME ASSISTANT / APPDAEMON
+# =========================
 HA_URL=http://homeassistant:8123
-HA_TOKEN=your-long-lived-access-token
+HA_TOKEN=CHANGE_ME_LONG_HA_TOKEN
+
 APPDAEMON_PORT=5050
 
-# ========================
-# Node-RED
-# ========================
-NODE_RED_PORT=1880
-NODE_RED_USER=homelab
-NODE_RED_PASSWORD=changeme
+# =========================
+# MQTT / MOSQUITTO
+# =========================
+MOSQUITTO_USER=homelab
+MOSQUITTO_PASSWORD=CHANGE_ME_MQTT_PASSWORD
 
-# ========================
-# Grafana
-# ========================
+# =========================
+# MARIA DB
+# =========================
+MYSQL_ROOT_PASSWORD=CHANGE_ME_ROOT
+MYSQL_DATABASE=homeassistant
+MYSQL_USER=homeassistant
+MYSQL_PASSWORD=CHANGE_ME_DB_PASSWORD
+
+# =========================
+# NODE RED
+# =========================
+NODE_RED_PORT=1880
+NODE_RED_USER=admin
+NODE_RED_PASSWORD=CHANGE_ME_NODE_RED
+
+# =========================
+# GRAFANA
+# =========================
 GRAFANA_PORT=3000
 GF_ADMIN_USER=admin
-GF_ADMIN_PASSWORD=changeme
+GF_ADMIN_PASSWORD=CHANGE_ME_GRAFANA
 
-# ========================
-# Uptime-Kuma
-# ========================
+# =========================
+# UPTIME KUMA
+# =========================
 UPTIME_KUMA_PORT=3001
 
-# ========================
-# Gotify
-# ========================
-GOTIFY_PORT=8081
+# =========================
+# GOTIFY
+# =========================
+GOTIFY_PORT=8080
 GOTIFY_ADMIN_USER=admin
-GOTIFY_ADMIN_PASSWORD=changeme
+GOTIFY_ADMIN_PASSWORD=CHANGE_ME_GOTIFY
+GOTIFY_API_TOKEN=OPTIONAL_ADD_LATER
 
-# ========================
-# Portainer
-# ========================
+# =========================
+# DUCKDNS
+# =========================
+DUCKDNS_TOKEN=CHANGE_ME_DUCKDNS_TOKEN
+DUCKDNS_SUBDOMAINS=yourdomain
+DUCKDNS_DOMAINS=yourdomain.duckdns.org
+
+# =========================
+# PORTAINER
+# =========================
 PORTAINER_USER=admin
-PORTAINER_PASSWORD=changeme
+PORTAINER_PASSWORD=CHANGE_ME_PORTAINER
 
-# ========================
-# Homepage
-# ========================
-HOMEPAGE_PORT=8000
+# =========================
+# HOMEPAGE DASHBOARD
+# =========================
+HOMEPAGE_PORT=8082
 HOMEPAGE_ADMIN_USER=admin
-HOMEPAGE_ADMIN_PASSWORD=changeme
+HOMEPAGE_ADMIN_PASSWORD=CHANGE_ME_HOMEPAGE
 
-# ========================
-# Beszel
-# ========================
-BESZEL_PORT=8001
+# =========================
+# BESZEL
+# =========================
+BESZEL_PORT=8083
 BESZEL_ADMIN_USER=admin
-BESZEL_ADMIN_PASSWORD=changeme
+BESZEL_ADMIN_PASSWORD=CHANGE_ME_BESZEL
 
-# ========================
-# Mosquitto (optioneel, voor beveiliging broker)
-# ========================
-MOSQUITTO_USER=homelab
-MOSQUITTO_PASSWORD=changeme
+# =========================
+# BLE2MQTT
+# =========================
+BLE2MQTT_DEVICE=hci0
+
+# =========================
+# ZIGBEE2MQTT
+# =========================
+ZIGBEE2MQTT_DEVICE=/dev/ttyACM0
+
+# =========================
+# ESPHOME
+# =========================
+ESPHOME_PORT=6052
