--- a/nix/.env
+++ b/nix/.env
@@ -84,12 +84,12 @@ BESZEL_ADMIN_PASSWORD=CHANGE_ME_BESZEL
 # =========================
 # BLE2MQTT
 # =========================
-BLE2MQTT_DEVICE=hci0
+BLE2MQTT_DEVICE=/dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 
 # =========================
 # ZIGBEE2MQTT
 # =========================
-ZIGBEE2MQTT_DEVICE=/dev/ttyACM0
+ZIGBEE2MQTT_DEVICE=/dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_123456-if00-port0
 
 # =========================
 # ESPHOME
