--- a/nix/docker-compose.yaml
+++ b/nix/docker-compose.yaml
@@ -5,7 +5,7 @@ networks:
 services:
 
   # ---------------------------
-  # Home Assistant + AppDaemon
+  # Home Assistant
   # ---------------------------
   homeassistant:
     image: ghcr.io/home-assistant/home-assistant:stable
@@ -17,50 +17,52 @@ services:
     volumes:
       - ./homeassistant:/config
     devices:
-      - /dev/ttyUSB0   # Zigbee
-      - /dev/ttyACM0   # Zigbee2MQTT
-      - /dev/ble0      # BLE dongle (pas aan)
+      - "${ZIGBEE2MQTT_DEVICE}:${ZIGBEE2MQTT_DEVICE}"
+      - "${BLE2MQTT_DEVICE}:${BLE2MQTT_DEVICE}"
     depends_on:
       - mariadb
       - mosquitto
     networks:
       - homelab_net
 
+  # ---------------------------
+  # AppDaemon
+  # ---------------------------
   appdaemon:
     image: acockburn/appdaemon:latest
     container_name: appdaemon
     restart: unless-stopped
     ports:
       - "${APPDAEMON_PORT}:5050"
+    env_file: .env
     volumes:
       - ./appdaemon:/conf
-    environment:
-      - HA_URL=${HA_URL}
-      - HA_TOKEN=${HA_TOKEN}
-      - TZ=${TZ}
     depends_on:
       - homeassistant
     networks:
       - homelab_net
 
   # ---------------------------
-  # MQTT & Database
+  # MQTT / Mosquitto
   # ---------------------------
   mosquitto:
     image: eclipse-mosquitto:2
     container_name: mosquitto
     restart: unless-stopped
-    ports:
-      - "1883:1883"
     env_file: .env
     environment:
       - MOSQUITTO_USER=${MOSQUITTO_USER}
       - MOSQUITTO_PASSWORD=${MOSQUITTO_PASSWORD}
     volumes:
       - ./mosquitto:/mosquitto
+    ports:
+      - "1883:1883"
     networks:
       - homelab_net
 
+  # ---------------------------
+  # MariaDB
+  # ---------------------------
   mariadb:
     image: mariadb:11
     container_name: mariadb
@@ -78,14 +80,9 @@ services:
     image: nodered/node-red:latest
     container_name: node-red
     restart: unless-stopped
+    env_file: .env
     ports:
       - "${NODE_RED_PORT}:1880"
-    environment:
-      - TZ=${TZ}
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - NODE_RED_USERNAME=${NODE_RED_USER}
-      - NODE_RED_PASSWORD=${NODE_RED_PASSWORD}
     volumes:
       - ./node-red:/data
     networks:
@@ -109,11 +106,9 @@ services:
     image: grafana/grafana:latest
     container_name: grafana
     restart: unless-stopped
+    env_file: .env
     ports:
       - "${GRAFANA_PORT}:3000"
-    environment:
-      - GF_ADMIN_USER=${GF_ADMIN_USER}
-      - GF_ADMIN_PASSWORD=${GF_ADMIN_PASSWORD}
     volumes:
       - ./grafana:/var/lib/grafana
     depends_on:
@@ -122,7 +117,7 @@ services:
       - homelab_net
 
   # ---------------------------
-  # Monitoring & management
+  # Uptime-Kuma
   # ---------------------------
   uptime-kuma:
     image: louislam/uptime-kuma:1
@@ -135,6 +130,9 @@ services:
     networks:
       - homelab_net
 
+  # ---------------------------
+  # Portainer
+  # ---------------------------
   portainer:
     image: portainer/portainer-ce:latest
     container_name: portainer
@@ -142,15 +140,16 @@ services:
     ports:
       - "9000:9000"
       - "9443:9443"
-    environment:
-      - PORTAINER_USER=${PORTAINER_USER}
-      - PORTAINER_PASSWORD=${PORTAINER_PASSWORD}
+    env_file: .env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./portainer:/data
     networks:
       - homelab_net
 
+  # ---------------------------
+  # Dozzle
+  # ---------------------------
   dozzle:
     image: amir20/dozzle:latest
     container_name: dozzle
@@ -163,7 +162,7 @@ services:
       - homelab_net
 
   # ---------------------------
-  # Web services
+  # Homepage Dashboard
   # ---------------------------
   homepage:
     image: your/homepage-image
@@ -171,30 +170,29 @@ services:
     restart: unless-stopped
     ports:
       - "${HOMEPAGE_PORT}:80"
-    environment:
-      - ADMIN_USER=${HOMEPAGE_ADMIN_USER}
-      - ADMIN_PASSWORD=${HOMEPAGE_ADMIN_PASSWORD}
+    env_file: .env
     volumes:
       - ./homepage:/usr/share/nginx/html
     networks:
       - homelab_net
 
+  # ---------------------------
+  # Beszel
+  # ---------------------------
   beszel:
     image: your/beszel-image
     container_name: beszel
     restart: unless-stopped
     ports:
       - "${BESZEL_PORT}:80"
-    environment:
-      - ADMIN_USER=${BESZEL_ADMIN_USER}
-      - ADMIN_PASSWORD=${BESZEL_ADMIN_PASSWORD}
+    env_file: .env
     volumes:
       - ./beszel:/app
     networks:
       - homelab_net
 
   # ---------------------------
-  # DuckDNS & Gotify
+  # DuckDNS
   # ---------------------------
   duckdns:
     image: linuxserver/duckdns
@@ -206,15 +204,16 @@ services:
     networks:
       - homelab_net
 
+  # ---------------------------
+  # Gotify
+  # ---------------------------
   gotify:
     image: gotify/server:2.0
     container_name: gotify
     restart: unless-stopped
+    env_file: .env
     ports:
       - "${GOTIFY_PORT}:8080"
-    environment:
-      - GOTIFY_ADMIN_USER=${GOTIFY_ADMIN_USER}
-      - GOTIFY_ADMIN_PASSWORD=${GOTIFY_ADMIN_PASSWORD}
     volumes:
       - ./gotify:/app/data
     networks:
@@ -228,15 +227,11 @@ services:
     container_name: ble2mqtt
     restart: unless-stopped
     network_mode: host
-    environment:
-      - TZ=${TZ}
-      - MQTT_BROKER_URL=tcp://mosquitto:1883
-      - MQTT_USERNAME=${MOSQUITTO_USER}
-      - MQTT_PASSWORD=${MOSQUITTO_PASSWORD}
+    env_file: .env
+    devices:
+      - "${BLE2MQTT_DEVICE}:${BLE2MQTT_DEVICE}"
     volumes:
       - ./ble2mqtt:/config
-    devices:
-      - /dev/ble0
 
   # ---------------------------
   # ESPHome
@@ -245,12 +240,11 @@ services:
     image: esphome/esphome:latest
     container_name: esphome
     restart: unless-stopped
+    env_file: .env
     ports:
-      - "6052:6052"
+      - "${ESPHOME_PORT}:6052"
     volumes:
       - ./esphome:/config
-    environment:
-      - TZ=${TZ}
     networks:
       - homelab_net
 
@@ -262,12 +256,8 @@ services:
     container_name: zigbee2mqtt
     restart: unless-stopped
     network_mode: host
+    env_file: .env
     volumes:
       - ./zigbee2mqtt/data:/app/data
-    environment:
-      - TZ=${TZ}
-      - MQTT_BROKER_URL=tcp://mosquitto:1883
-      - MQTT_USERNAME=${MOSQUITTO_USER}
-      - MQTT_PASSWORD=${MOSQUITTO_PASSWORD}
     devices:
-      - /dev/ttyACM0
+      - "${ZIGBEE2MQTT_DEVICE}:${ZIGBEE2MQTT_DEVICE}"
